# gtk-weather-app

./: .gitignore  README.md  favorites.txt  gtk_example.c
kotlin-version/app/: build.gradle.kts
kotlin-version/app/src/main/java/com/example/weatherapp/: MainActivity.kt
kotlin-version/app/src/main/java/com/example/weatherapp/ui/theme/: Theme.kt
kotlin-version/gradle/wrapper/: gradle-wrapper.properties
qt-version/: CMakeLists.txt  FindQt5AndroidSupport.cmake  mainwindow.cpp  mainwindow.h
